--- a/flags.sample
+++ b/flags.sample
@@ -1,3 +1,3 @@
-CA{ABC123}:Test 1
-CA{TEH_H4X0R}:The H4x0r
-CA{BOOOOOOOO}:Spooky Scary CTF
+CA{ABC123}:692319732652703745
+CA{TEH_H4X0R}:692319732652703745
+CA{BOOOOOOOO}:123
