--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,11 +22,11 @@ jobs:
       - name: Log into GitHub Container Registry
       # TODO: Create a PAT with `read:packages` and `write:packages` scopes and save it as an Actions secret `CR_PAT`
         id: login
-        if: ${{ github.ref == "refs/heads/main" }}
+        if: ${{ github.ref }} == "refs/heads/main"
         run: echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Push image to GitHub Container Registry
-        if: ${{ steps.login.outcome == "success" }}
+        if: ${{ steps.login.outcome }} == "success"
         run: |
           IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
 
